# pytest_skyproject

./: pyproject.toml
tests/: test_arrs.py
