[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["Alexei Vorotyntsev"]
readme = "README.md"
packages = [{include = "pytest_proj"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
